{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 31,
  "lineage": "6d9d218e-bda0-b3f1-9850-d96236f11269",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.946-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-egress-default",
            "log_config": [],
            "name": "flexydial-egress-default",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-egress-default",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "3232-3233",
                  "8084-8087"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.924-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-ingress-app",
            "log_config": [],
            "name": "flexydial-ingress-app",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-ingress-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "5432-5434",
                  "6379",
                  "23260"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.815-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-ingress-db",
            "log_config": [],
            "name": "flexydial-ingress-db",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-ingress-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "app",
              "redis",
              "telephony",
              "websocket"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6379"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.602-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-ingress-redis",
            "log_config": [],
            "name": "flexydial-ingress-redis",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-ingress-redis",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "app",
              "db",
              "telephony",
              "websocket"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "redis"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-telephony",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "7443",
                  "8021",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5080",
                  "16384-32768"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.809-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-ingress-telephony",
            "log_config": [],
            "name": "flexydial-ingress-telephony",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-ingress-telephony",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "app",
              "db",
              "redis",
              "websocket"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "telephony"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress-websocket",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3232",
                  "3233",
                  "8084-8087"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-03-28T00:23:56.911-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flexy-345006/global/firewalls/flexydial-ingress-websocket",
            "log_config": [],
            "name": "flexydial-ingress-websocket",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "priority": 1000,
            "project": "flexy-345006",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/firewalls/flexydial-ingress-websocket",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "app",
              "db",
              "redis",
              "telephony"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "websocket"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20220317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/flexy-345006/zones/us-central1-a/disks/tf-flexydial-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/flexy-345006/zones/us-central1-a/instances/tf-flexydial-instance",
            "instance_id": "4447171882053810828",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "HF-BT7FXsFs=",
            "name": "tf-flexydial-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.66.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
                "network_ip": "10.164.28.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/flexy-345006/regions/us-central1/subnetworks/flexydial-public-subnet",
                "subnetwork_project": "flexy-345006"
              }
            ],
            "project": "flexy-345006",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/zones/us-central1-a/instances/tf-flexydial-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app"
            ],
            "tags_fingerprint": "-ITvvbWD_xo=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/flexy-345006/global/networks/flexydial-vpc",
            "mtu": 0,
            "name": "flexydial-vpc",
            "project": "flexy-345006",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-03-28T00:28:26.791-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/flexy-345006/regions/us-central1/routers/flexydial-router",
            "name": "flexydial-router",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "project": "flexy-345006",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/regions/us-central1/routers/flexydial-router"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "flexy-345006/us-central1/flexydial-router/flexydial-router-nat",
            "min_ports_per_vm": 0,
            "name": "flexydial-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "flexy-345006",
            "region": "us-central1",
            "router": "flexydial-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T00:27:37.489-07:00",
            "gateway_address": "10.164.29.1",
            "id": "projects/flexy-345006/regions/us-central1/subnetworks/flexydial-private-subnet",
            "ip_cidr_range": "10.164.29.0/24",
            "name": "flexydial-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "flexy-345006",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/regions/us-central1/subnetworks/flexydial-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T00:28:02.608-07:00",
            "gateway_address": "10.164.28.1",
            "id": "projects/flexy-345006/regions/us-central1/subnetworks/flexydial-public-subnet",
            "ip_cidr_range": "10.164.28.0/24",
            "name": "flexydial-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/flexy-345006/global/networks/flexydial-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "flexy-345006",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flexy-345006/regions/us-central1/subnetworks/flexydial-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}